--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "ionic-angular": "3.2.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "jquery": "^3.3.1",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.10"
