--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "crowdsourcerescue",
-  "app_id": "",
+  "app_id": "com.crowdsourcerescue.rescueapp",
   "integrations": {
     "cordova": {}
   },
