entity view pages

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ngx-translate/http-loader": "0.0.3",
     "angular2-jwt": "^0.2.3",
     "cordova-android": "7.0.0",
+    "cordova-ios": "4.5.4",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^1.1.7",
@@ -99,7 +100,8 @@
       }
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
