--- a/package.json
+++ b/package.json
@@ -89,8 +89,8 @@
       "cordova-plugin-geolocation": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
