--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "4.1.0",
     "@ionic-native/background-geolocation": "^4.7.0",
     "@ionic-native/camera": "^4.5.3",
-    "@ionic-native/core": "3.7.0",
+    "@ionic-native/core": "^4.3.0",
     "@ionic-native/file": "^4.5.3",
     "@ionic-native/file-path": "^4.5.3",
     "@ionic-native/file-transfer": "^4.5.3",
@@ -33,10 +33,8 @@
     "@ngx-translate/core": "^6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
     "angular2-jwt": "^0.2.3",
-    "cordova-android": "7.0.0",
-    "cordova-background-geolocation-lt": "^2.13.1",
+    "cordova-android": "7.1.1",
     "cordova-ios": "4.5.4",
-    "cordova-plugin-background-fetch": "^5.4.1",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-cocoalumberjack": "0.0.4",
     "cordova-plugin-console": "^1.1.0",
@@ -44,7 +42,7 @@
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filepath": "^1.3.0",
-    "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-geolocation": "^0.3.6",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -52,7 +50,7 @@
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "jquery": "^3.3.1",
-    "rxjs": "5.1.1",
+    "rxjs": "^5.1.1",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.10"
   },
@@ -89,17 +87,7 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-filepath": {},
-      "cordova-plugin-geolocation": {},
-      "cordova-background-geolocation-lt": {
-        "LICENSE": "YOUR_LICENSE_KEY",
-        "GOOGLE_API_VERSION": "15.0.1",
-        "APPCOMPAT_VERSION": "27.1.1",
-        "BACKGROUND_MODE_LOCATION": "<string>location</string>",
-        "LOCATION_ALWAYS_AND_WHEN_IN_USE_USAGE_DESCRIPTION": "Always use is required for constant background location-tracking",
-        "LOCATION_ALWAYS_USAGE_DESCRIPTION": "Background location-tracking is required",
-        "LOCATION_WHEN_IN_USE_USAGE_DESCRIPTION": "Background location-tracking is required",
-        "MOTION_USAGE_DESCRIPTION": "Using the accelerometer increases battery-efficiency by intelligently toggling location-tracking only when the device is detected to be moving"
-      }
+      "org.apache.cordova.geolocation": {}
     },
     "platforms": [
       "ios",
